# healthomics-workflows

./: .gitignore  Dockerfile  LOCAL-EXECUTION-WITH-MINIWDL.md  README.md  maccabi_project.md  pyproject.toml
.github/utils/: validate_globals_docker_images.py  validate_input_templates.py
.github/workflows/: workflows_validator.yml
docs/: ug_hcr.md
docs/probability_example/: create_flow_probabilities.ipynb  util.py
scripts/: aws-assume-role
scripts/healthomics_support/: README.md  run_support.py
scripts/healthomics_wf/: README.md  create_healthomics_workflow.py  invoke_healthomics_run.py  localize_dockers.py  localize_s3.py  omics_workflows.py  pyproject.toml  requirements.txt
scripts/healthomics_wf/utils/: validate_genome_resources.py  validate_globals_docker_images.py  validate_input_templates.py
scripts/healthomics_wf/utils/modules/: localize_dockers.py  localize_s3.py  omics_workflows.py  s3_validation.py
scripts/wdl_localization/: README.md  create_healthomics_workflow.py  localize_s3.py  omics_workflows.py
terraform/healthomics-wdl-env/: README.md  backend.tf  init.sh  main.tf  outputs.tf  variables.tf
ultima_genomics_deepvariant/: r2r_efficiant_dv.md  r2r_efficient_dv_parameter_template.json
ultima_genomics_deepvariant/test_files/: UltimaGenomicsDV_parameters.json  sample.chr9.10M.cram  sample.chr9.10M.cram.crai  sample.chr9.12M.cram  sample.chr9.12M.cram.crai
ultima_genomics_deepvariant/test_outputs/: sample.chr9.10M.h5  sample.chr9.10M.vcf  sample.chr9.10M.vcf.gz.tbi  sample.chr9.10M_metrics.h5  sample.h5  (+3 more)
workflows/: gbg_runs.md
(+344 files in other folders)
